<resources>
    <string name="app_name">Banker</string>
    <string name="balance">Balance</string>
    <string name="account_number">Account number</string>
    <string name="account_name">Account Name</string>
    <string name="create_account">Create Account</string>
    <string name="check_balance">Check Balance</string>
    <string name="credit_to_account">Credit to Account</string>
    <string name="debit_from_account">Debit from Account</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="view_all_accounts">View all Accounts</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="icon">Icon</string>
    <string name="_0_00">0.00</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="account_creation_page_logo">Account creation page logo</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="account_type">Account type</string>
    <string name="account_email">Email</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="credit_your_account">Credit Your Account</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string-array name="accounts">
        <item>Savings  Account</item>
        <item>Current Account</item>
        <item>Fixed Deposit</item>
        <item>NRI Account</item>
    </string-array>
</resources>