<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. Created by Rajasingh Samuel.
  -->

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_view_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"

            android:text="@string/account_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/text_view_account_number"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_account_name"
            android:text="@string/account_number"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:id="@+id/text_view_balance"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/balance"/>
    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>